# naptha-sdk

./: .env.example  .gitignore  README.md  cli.py  naptha-cookbook.ipynb  pyproject.toml  test-describe.sh  test-runs.sh  test-sd.sh  test-write.sh  test.py  testing.md
.github/workflows/: python-publish.yml
READMEs/: TESTING.md
daimon_sdk_python/: daimon.py  hub.py
example_yamls/: create_profile_description.yml  describe_daimon_template.yml  docker_cv2_image.yml  docker_cv_image.yaml  docker_hello_world.yml  hello_world_daimon_template.yml  sd_daimon_template.yml  sdi2i_daimon_template.yml  summary_daimon_template.yml
naptha_sdk/: agent.py  agent_service.py  agent_service_engine.py  app.py  cli.py  code_extraction.py  config.py  configs.py  coworker.py  environment.py  flow.py  hub.py  inference.py  kb.py  knowledge_base.py  mas.py  mas_engine.py  module_manager.py  orchestrator.py  package_manager.py  payments.py  schemas.py  scrape.py  secrets.py  services.py  task.py  task_engine.py  tool.py  toolset.py  user.py  utils.py
naptha_sdk/client/: grpc_pool_manager.py  grpc_server_pb2.py  grpc_server_pb2_grpc.py  hub.py  inference.py  ipfs.py  local_db.py  naptha.py  node.py  plugin.py  services.py
naptha_sdk/client/comms/: http_client.py  ws_client.py
naptha_sdk/components/: agent_service.py  mas.py
naptha_sdk/modules/: agent.py  environment.py  kb.py  memory.py  orchestrator.py  tool.py
naptha_sdk/plugins/: core.py  manager.py
naptha_sdk/plugins/frameworks/camel-ai/: metadata.json  plugin.py
naptha_sdk/plugins/frameworks/camel-ai/versions/v0.2.20/: template.jinja
naptha_sdk/plugins/frameworks/crewai/: metadata.json  plugin.py
naptha_sdk/plugins/frameworks/crewai/versions/v0.100.0/: template.jinja
naptha_sdk/plugins/frameworks/langchain/: metadata.json  plugin.py
naptha_sdk/plugins/frameworks/langchain/versions/v0.3.18/: template.jinja
naptha_sdk/storage/: schemas.py  storage_client.py  storage_provider.py
proto/chatflowmodule/: job.proto  job_pb2.py
test/: test_agent.py  test_environment.py  test_orchestrator.py
tests/: buy_credits.py  check_credits.py  check_task.py  check_tasks.py  list_sellers.py  run_task.py  sdk_tool_test.py  test-module-load.py  test-node-db.py  test_cli.py  test_inference_chat.py  test_modules.py  test_tool.py
tests/configs/: agent_deployments.json  environment_deployments.json  llm_configs.json  orchestrator_deployments.json
