[tool.poetry]
name = "naptha-sdk"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
httpx = "^0.27.0"
surrealdb = "^0.3.2"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
payments-py = "^0.1.2"
pyyaml = "^6.0.1"
ecdsa = "^0.19.0"
pytz = "^2024.1"
tabulate = "^0.9.0"
tomlkit = "^0.13.2"
ipfshttpclient = "^0.7.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
naptha = "cli:cli"