[project]
name = "naptha-sdk"
version = "0.1.3"
description = "Python SDK for interacting with Naptha nodes and building distributed AI modules"
authors = [{ name = "Richard Blythman", email = "richardblythman@gmail.com" }]
requires-python = ">=3.10,<=3.13"
readme = "README.md"
dependencies = [
    "httpx>=0.27.0,<0.28",
    "surrealdb>=0.3.2,<0.4",
    "pyjwt>=2.8.0,<3",
    "python-dotenv>=1.0.1,<2",
    "payments-py>=0.1.2,<0.2",
    "pyyaml>=6.0.1,<7",
    "ecdsa>=0.19.0,<0.20",
    "pytz~=2024.1",
    "tabulate>=0.9.0,<0.10",
    "tomlkit>=0.13.2,<0.14",
    "ipfshttpclient>=0.7.0,<0.8",
    "gitpython>=3.1.43,<4",
    "grpcio>=1.68.1,<2",
    "grpcio-tools>=1.68.1,<2",
    "pytest>=8.3.4,<9",
    "cryptography>=44.0.0,<45",
]

[project.scripts]
naptha = "naptha_sdk.cli:cli"

[project.entry-points."naptha_sdk.plugins"]
langchain = "naptha_sdk.plugins.frameworks.langchain.plugin:LangChainPlugin"
crewai = "naptha_sdk.plugins.frameworks.crewai.plugin:CrewAIPlugin"
camel-ai = "naptha_sdk.plugins.frameworks.camel-ai.plugin:CameAIPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["naptha_sdk"]
